--- a/Leonardo/Leonardo.csproj
+++ b/Leonardo/Leonardo.csproj
@@ -61,6 +61,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SignIn.cs" />
     <Compile Include="SignUp.cs" />
+    <Compile Include="User.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\AboutResources.txt" />
