--- a/Leonardo/Leonardo.csproj
+++ b/Leonardo/Leonardo.csproj
@@ -61,6 +61,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SignIn.cs" />
     <Compile Include="SignUp.cs" />
+    <Compile Include="TopScore.cs" />
     <Compile Include="User.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -73,6 +74,9 @@
       <SubType>AndroidResource</SubType>
     </AndroidResource>
     <AndroidResource Include="Resources\layout\SignUp.axml">
+      <SubType>AndroidResource</SubType>
+    </AndroidResource>
+    <AndroidResource Include="Resources\layout\TopScore.axml">
       <SubType>AndroidResource</SubType>
     </AndroidResource>
   </ItemGroup>
