--- a/Leonardo/Leonardo.csproj
+++ b/Leonardo/Leonardo.csproj
@@ -66,6 +66,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SignIn.cs" />
     <Compile Include="SignUp.cs" />
+    <Compile Include="SoundController.cs" />
     <Compile Include="TopScore.cs" />
     <Compile Include="User.cs" />
   </ItemGroup>
