--- a/Leonardo/Properties/AndroidManifest.xml
+++ b/Leonardo/Properties/AndroidManifest.xml
@@ -1,34 +1,22 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android" package="com.parse.leonardo" android:versionCode="1" android:versionName="1.0">
 	<uses-sdk />
-
-  <!-- AndroidManifest.xml -->
-
-  <uses-permission android:name="android.permission.INTERNET" />
-  <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
-  <uses-permission android:name="android.permission.WAKE_LOCK" />
-  <uses-permission android:name="android.permission.GET_ACCOUNTS" />
-  <uses-permission android:name="com.google.android.c2dm.permission.RECEIVE" />
-
-  <permission android:protectionLevel="signature"
-      android:name="com.parse.leonardo.permission.C2D_MESSAGE" />
-  <uses-permission android:name="com.parse.leonardo.permission.C2D_MESSAGE" />
-
-
-
-
-
-  <application android:label="com.parse.leonardo" android:icon="@drawable/Icon">
-    <service android:name="parse.ParsePushService" />
-    <receiver android:name="parse.ParsePushBroadcastReceiver"
-        android:permission="com.google.android.c2dm.permission.SEND">
-      <intent-filter>
-        <action android:name="com.google.android.c2dm.intent.RECEIVE" />
-        <action android:name="com.google.android.c2dm.intent.REGISTRATION" />
-
-        <category android:name="com.parse.leonardo" />
-      </intent-filter>
-    </receiver>
-    
-  </application>
+	<!-- AndroidManifest.xml -->
+	<uses-permission android:name="android.permission.INTERNET" />
+	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+	<uses-permission android:name="android.permission.WAKE_LOCK" />
+	<uses-permission android:name="android.permission.GET_ACCOUNTS" />
+	<uses-permission android:name="com.google.android.c2dm.permission.RECEIVE" />
+	<permission android:protectionLevel="signature" android:name="com.parse.leonardo.permission.C2D_MESSAGE" />
+	<uses-permission android:name="com.parse.leonardo.permission.C2D_MESSAGE" />
+	<application android:label="com.parse.leonardo" android:icon="@drawable/Icon">
+		<service android:name="parse.ParsePushService" />
+		<receiver android:name="parse.ParsePushBroadcastReceiver" android:permission="com.google.android.c2dm.permission.SEND">
+			<intent-filter>
+				<action android:name="com.google.android.c2dm.intent.RECEIVE" />
+				<action android:name="com.google.android.c2dm.intent.REGISTRATION" />
+				<category android:name="com.parse.leonardo" />
+			</intent-filter>
+		</receiver>
+	</application>
 </manifest>
